* GSWeb.framework/GSWDisplayGroup.m:         ([GSWDisplayGroup init]): Set fetchesOnLoad to YES by default.         Reported by S.J. Chun <chunsj@embian.com>.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19157 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-20  David Ayers  <d.ayers@inode.at>
+
+	* GSWeb.framework/GSWDisplayGroup.m:
+	([GSWDisplayGroup init]): Set fetchesOnLoad to YES by default.
+	Reported by S.J. Chun <chunsj@embian.com>.
+
 2004-04-14  David Ayers  <d.ayers@inode.at>
 
 	* gsweb.make.in: Remove GSANTLR dependency.
