--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-06  David Ayers  <d.ayers@inode.at>
+
+	* INSTALL: Update prerequisites.
+	
 2004-04-22  S.J. Chun <chunsj@embian.com>
 
 	* GSWExtensions.framework/GSWKeyValueConditional.m
