* GSWAdaptors/common/common.make: Whitespace update.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19244 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2004-05-06  David Ayers  <d.ayers@inode.at>
 
 	* INSTALL: Update prerequisites.
+	* GSWAdaptors/common/common.make: Whitespace update.
 	
 2004-04-22  S.J. Chun <chunsj@embian.com>
 
