* GSWeb.framework/GSWDefaultAdaptor.m: Whitespace update.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19245 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* INSTALL: Update prerequisites.
 	* GSWAdaptors/common/common.make: Whitespace update.
+	* GSWeb.framework/GSWDefaultAdaptor.m: Ditto.
 	
 2004-04-22  S.J. Chun <chunsj@embian.com>
 
