* GSWeb.framework/NSString+HTML.m: Include limits.h.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19248 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,8 @@
 	([GSWSession permanentPageCacheSize], [GSWSession pageCacheSize]):
 	Replace uint with unsigned int.
 
+	* GSWeb.framework/NSString+HTML.m: Include limits.h.
+
 2004-05-06  David Ayers  <d.ayers@inode.at>
 
 	* INSTALL: Update prerequisites.
