* GSWeb.framework/GNUmakefile: Make GSWDefines.h a public 	header.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19345 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-16  David Ayers  <d.ayers@inode.at>
+
+	* GSWeb.framework/GNUmakefile: Make GSWDefines.h a public header.
+	
 2004-05-14   Manuel Guesdon <mguesdon@orange-concept.com>
 
 	* GSWeb.framework/GSWHTMLTemplateParser.m:
