--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-16  David Wetzel <dave@turbocat.de>
+
+	* GSWeb.framework/GSWApplication.m ([GSWApplication
+	lockedInitComponentBearingFrameworksFromBundleArray:]):
+	Commented support for hasGSWComponents optimization.
+	
 2004-05-16  David Ayers  <d.ayers@inode.at>
 	    Matt Rice  <ratmice@yahoo.com>
 
