* GSWeb.framework/GSWStatisticsStore.m         ([GSWStatisticsStore _memoryUsage]): Remove usage of pidstat         and pidstatm.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19368 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* GSWeb.framework/GSWUtils.h/m: (struct proc_s, proc_t): Removed.
 	(pidstat, pidstatm, pidproccontent): Removed.
+	* GSWeb.framework/GSWStatisticsStore.m
+	([GSWStatisticsStore _memoryUsage]): Remove usage of pidstat and
+	pidstatm.
 
 	* GSWeb.framework/GSWProcFS.h/m: Make class more portable.
 	Replace all system dependent types with standard types.  Replace
