Fix last ChangeLog cleanup.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19524 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,8 +14,7 @@
         in appendContentString: append string only if not nil 
         (patch from Philip Moetteli)
 
-2004-06-01  David Wetzel  2004-05-18  David Ayers  <d.ayers@inode.at>
-<dave@turbocat.de>
+2004-06-01  David Wetzel  <dave@turbocat.de>
 
 	* GSWeb.framework/GSWDeclarationParser.m:
 	supports 'true' and 'false' now. Will be transformed into YES and NO
