* GSWeb.framework/GSWDeclarationParser.m (-[tryParseBoolean]):         Make more robust and allow upper and lower case variants and         single letter variants of both YES/NO and true/false.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19525 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	* GSWeb.framework/GSUtils.m (boolValueWithDefaultFor): Do not
 	reimplement defaults bool evaluation semantics differently from
 	-base / Foundation.
+	* GSWeb.framework/GSWDeclarationParser.m (-[tryParseBoolean]):
+	Make more robust and allow upper and lower case variants and
+	single letter variants of both YES/NO and true/false.
 	
 2004-06-14  David Wetzel  <dave@turbocat.de>
 	
