* GSWeb.framework/GNUmakefile: Add GSWApplication+Defaults.m.         * GSWeb.framework/GSWApplication.m:         (globalAppDefaultOptions, WOStrictFlag)         (GSWeb_ApplicationDebugSetChange,         * GSWApplicationSetDebugSetOption)         (GSWeb_AdjustVolatileNSArgumentDomain)         (GSWeb_InitializeGlobalAppDefaultOptions)         (GSWeb_InitializeDebugOptions)         (GSWeb_DestroyGlobalAppDefaultOptions)         ((GSWApplicationDefaults), (UserDefaults)): Move from here to...         * GSWeb.framework/GSWApplication+Defaults.m: ... here.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19931 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,7 +26,18 @@
 
 	([-lockedInitComponentBearingFrameworksFromBundleArray]): Comment
 	unused variable to avoid warning.
-	
+
+	Part II
+	* GSWeb.framework/GNUmakefile: Add GSWApplication+Defaults.m.
+	* GSWeb.framework/GSWApplication.m:
+	(globalAppDefaultOptions, WOStrictFlag)
+	(GSWeb_ApplicationDebugSetChange, GSWApplicationSetDebugSetOption)
+	(GSWeb_AdjustVolatileNSArgumentDomain)
+	(GSWeb_InitializeGlobalAppDefaultOptions)
+	(GSWeb_InitializeDebugOptions)
+	(GSWeb_DestroyGlobalAppDefaultOptions)
+	((GSWApplicationDefaults), (UserDefaults)): Move from here to...
+	* GSWeb.framework/GSWApplication+Defaults.m: ... here.
 	
 2004-06-16  David Wetzel  <dave@turbocat.de>
 
