* GSWeb.framework/GSWApplication+Defaults.m 	(_lockDefaultEditingContext, _setLockDefaultEditingContext) 	(_allowsCacheControlHeader, _setAllowsCacheControlHeader) 	Fix naming to conform to key value coding methods.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19967 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,11 @@
 	* GSWeb.framework/GSWDeclarationParser.m:
 	(parseDeclarationString:named:inFrameworkNamed:): Use -base's
 	version of md5 methods instead of adding gscrypt dependency.
+
+	* GSWeb.framework/GSWApplication+Defaults.m
+	(_lockDefaultEditingContext, _setLockDefaultEditingContext)
+	(_allowsCacheControlHeader, _setAllowsCacheControlHeader)
+	Fix naming to conform to key value coding methods.
 	
 2004-09-01   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWExtensions.framework/GSWCollapsibleComponentContent.m: 
