* GSWeb.framework/GSWApplication+Defaults.m         (cgiAdaptorURL, setCGIAdaptorURL): Fix naming to conform to         key value coding methods.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19972 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-02  David Ayers  <d.ayers@inode.at>
+
+	* GSWeb.framework/GSWApplication+Defaults.m
+	(cgiAdaptorURL, setCGIAdaptorURL): Fix naming to conform to key
+	value coding methods.
+	
 2004-09-01  David Ayers  <d.ayers@inode.at>
 
 	* GSWeb.framework/GSWDeclarationParser.m:
